--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -7,7 +7,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="navbar-brand" href="{% url 'add_news' %}">Add news</a></li>
+            {% if request.user.is_authenticated %}
+                <li class="nav-item"><a class="navbar-brand" href="{% url 'add_news' %}">Add news</a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
