--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -1,15 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'home' %}"> Sport News </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}"> Sport News </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            {% if request.user.is_authenticated %}
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                {% if request.user.is_authenticated %}
                 <li class="nav-item"><a class="navbar-brand" href="{% url 'add_news' %}">Add news</a></li>
+                {% endif %}
+            </ul>
+        </div>
+        <span class="navbar-text">
+            {% if request.user.is_authenticated %}
+            {{ user.username }} | <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+            <a href="{% url 'register' %}">Register</a> | <a href="{% url 'login' %}">Login</a>
             {% endif %}
-        </ul>
+        </span>
     </div>
 </nav>
